deploy/k8s/keycloak/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wolfpackcloud-auth
  labels:
    app.kubernetes.io/name: wolfpackcloud-auth
